# concord-bft

bftengine/include/bftengine/: ClientMsgs.hpp  ReplicaConfig.hpp
bftengine/src/bftengine/: ReplicaImp.cpp
bftengine/src/bftengine/messages/: ClientReplyMsg.cpp  ClientReplyMsg.hpp  ClientRequestMsg.cpp  ReplicaAsksToLeaveViewMsg.cpp  ReplicaAsksToLeaveViewMsg.hpp
bftengine/src/preprocessor/: PreProcessor.cpp
bftengine/tests/: CMakeLists.txt
bftengine/tests/testSeqNumInfo/: CMakeLists.txt  seqNumInfo_test.cpp
tests/apollo/: CMakeLists.txt  test_skvbc_byzantine_read_only_liveness_attack.py  test_skvbc_client_transaction_signing.py
tests/apollo/util/: bft.py
tests/simpleKVBC/TesterReplica/: CMakeLists.txt  WrapCommunication.cpp  WrapCommunication.hpp  setup.cpp
tests/simpleKVBC/TesterReplica/strategy/: DropPrePreparesNoViewChangeStrategy.cpp  DropPrePreparesNoViewChangeStrategy.hpp  DropReadOnlyRepliesStrategy.cpp  DropReadOnlyRepliesStrategy.hpp
util/pyclient/: bft_msgs.py
